1.implemented showing marker on current location 2.implemented showing marker on Chennai airport and Mumbai airport 3.implemented button to show direction to chennai and mumbai airport on click 4.created custom info window on marker which shows address

--- a/GM Integration/Base.lproj/Main.storyboard
+++ b/GM Integration/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="y2f-w3-4vm">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,39 +10,38 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--MapVC-->
-        <scene sceneID="bcV-af-Q6z">
+        <!--Delegate-->
+        <scene sceneID="i2t-nQ-kDa">
             <objects>
-                <viewController id="RcM-3O-bt6" customClass="MapVC" customModule="GM_Integration" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="DKH-kh-NJd">
+                <viewController id="y2f-w3-4vm" customClass="MapVC" customModule="GM_Integration" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4Oi-Og-mkh">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QM5-hd-Bnn" customClass="GMSMapView">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="delegate" destination="y2f-w3-4vm" id="SCN-Ug-c3n"/>
+                                </connections>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="5NJ-6y-y0H"/>
+                        <constraints>
+                            <constraint firstItem="QM5-hd-Bnn" firstAttribute="bottom" secondItem="Pjm-7e-UBw" secondAttribute="bottom" id="HFe-y6-VYr"/>
+                            <constraint firstItem="QM5-hd-Bnn" firstAttribute="trailing" secondItem="Pjm-7e-UBw" secondAttribute="trailing" id="LUV-Te-qU5"/>
+                            <constraint firstItem="QM5-hd-Bnn" firstAttribute="top" secondItem="4Oi-Og-mkh" secondAttribute="top" id="TCd-qd-gtt"/>
+                            <constraint firstItem="QM5-hd-Bnn" firstAttribute="leading" secondItem="Pjm-7e-UBw" secondAttribute="leading" id="Zj6-4L-xdo"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Pjm-7e-UBw"/>
                     </view>
-                    <navigationItem key="navigationItem" id="SVg-O8-gdI"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="sSo-Gc-UnT" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="647" y="85"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="JYX-Kq-9UI">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="XI3-Mh-wev" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4jb-iV-oya">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="RcM-3O-bt6" kind="relationship" relationship="rootViewController" id="oth-Gd-1rx"/>
+                        <outlet property="mapView" destination="QM5-hd-Bnn" id="VPd-Bx-oM2"/>
                     </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tSF-nv-KRx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nbX-1M-wwA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-168" y="85.457271364317847"/>
+            <point key="canvasLocation" x="573.60000000000002" y="84.107946026986511"/>
         </scene>
     </scenes>
 </document>
